<resources>
    <string name="app_name">SpaceKids</string>
    <string name="title_activity_fase1">fase1</string>
    <string name="title_activity_fase2">fase2</string>

    <string name="nome">Nome</string>
    <string name="email">E-Mail</string>
    <string name="confirmacao">Confirmação da Senha</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro">Cadastro Pai</string>
    <string name="login">Login</string>
    <string name="voltar">Voltar</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="interrogacao">\?</string>
    <string name="acerte_a_sequ_ncia_de_cores">Acerte a sequência de cores</string>
    <string name="sexo" />
    <string name="masculino">Masculino</string>
    <string name="ninjas">Feminino</string>
    <string name="idade">Idade</string>
    <string name="cadastrar_crianca">Cadastrar Criança</string>
    <string name="cadastroCrianca">Cadastro Criança</string>
    <string name="jogar">Jogar</string>

</resources>
