<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_game"
    tools:context="com.example.a44602569838.spacekids.controller.CadastrarCricancaActivity">


    <include
        layout="@layout/include_toolbar_cadastro_crianca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <!-- Layout nome -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/nome_crianca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="255" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <RadioButton
            android:layout_gravity="center"
            android:id="@+id/radio_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/masculino" />

        <RadioButton
            android:layout_gravity="center"
            android:id="@+id/radio_feminino"
            android:onClick="onRadioButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ninjas" />
        </LinearLayout>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/idade_crianca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idade"
            android:inputType="textPersonName"
            android:maxLength="255" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/cadastrarCrianca"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:onClick="cadastrarCriancaOnClick"
        android:backgroundTint="@color/amareloDark"
        android:text="@string/cadastrar_crianca" />


</LinearLayout>
