<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end|end"
                android:src="@drawable/ic_edit"
                android:tint="@color/amareloDark"
                android:id="@+id/imageView" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/imageView"
                android:layout_toStartOf="@+id/imageView"
                android:src="@drawable/ic_delete"
                android:tint="@color/vermelho" />

            <ImageView
                android:id="@+id/foto"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/avatares_01" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_toEndOf="@id/foto"
                android:layout_toRightOf="@id/foto"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nomeCrianca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/idadeCrianca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/idade" />

                <TextView
                    android:id="@+id/sexoCrianca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>